# fishmlserver

./: .MANIFEST.swp  DockerFile  Dockerfile  README.md  fly.toml  in  pyproject.toml  r.txt
LB/: Dockerfile  default.conf
note/: Untitled.ipynb  fish.py
src/fishmlserver/: cli.py  curl.py  main.py
src/fishmlserver/model/: manager.py
tests/: curl_test.py  imsi_test.py
