[project]
name = "fishmlserver"
version = "0.6.0"
description = "env; TESTER"
authors = [
    {name = "NishNovae", email = "raecrowned@gmail.com"},
]
dependencies = [
#    "uvicorn[standard]>=0.30.6",
#    "fastapi>=0.112.2",
#    "scikit-learn>=1.3.2",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
note = [
    "notebook>=7.2.2",
]
