[project]
name = "fishmlserver"
version = "1.0.0"
description = "env; TESTER"
authors = [
    {name = "NishNovae", email = "raecrowned@gmail.com"},
]
dependencies = [
    #    "uvicorn[standard]>=0.30.6",
    #    "fastapi>=0.112.2",
    #    "scikit-learn>=1.3.2",
    "fire>=0.6.0",
    "pytest>=8.3.2",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
get-model-path = "fishmlserver.cli:model_path" 
prediction = "fishmlserver.cli:run_fish"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
note = [
    "notebook>=7.2.2",
]

test = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
pythonpath = "src"
